# Steve-Coding-Drills

./: .gitignore  README.md  go.mod
01-15-2023/: README.md  package.json  sui.log.2023-01-25
08-13-2022/: README.md  index.ts  package.json
08-15-2022/: README.md  package.json
08-16-2022/: README.md  package.json
08-17-2022/: README.md  package.json
08-18-2022/: README.md  package.json  tsconfig.json
09-03-2022/: package.json
10-12-2022/: package-lock.json  package.json
2022-08-13/: README.md  index.ts  package.json
2022-08-15/: README.md  package.json
2022-08-16/: README.md  package.json
2022-08-17/: README.md  package.json
2022-08-18/: README.md  package.json  tsconfig.json
2022-09-03/: package.json
2022-10-12/: package-lock.json  package.json
2023-01-15/: README.md  package.json  sui.log.2023-01-25
2024-07-16/: context2.py  context_manager.py  dumb4.py  futures.py  main.py  main2.py  main3.py  non-determinism.py
2024-07-17/: main.py  main2.py
2024-08-07/: go.mod  hello.go
2024-08-14/: my_library.go
2024-08-15/: go.mod  newthing.go
2024-08-16/: go.mod  runes.go
2024-08-19/: config_example.go  go.mod  go.sum  main.go  whatever.go
2024-08-22/: go.mod  main.go
2024-08-23/: go.mod  main.go  script.py
2024-08-25/: index.html  package.json  tsconfig.json  vite.config.js
2024-08-27/: README.md  index.html  package.json  script.js  script2.js  script3.js
2024-08-28/: index.html  package.json  vite-plugin.js  vite.config.ts
2024-08-29/: go.mod  (+1 more)
2024-10-16/: README.md  migTest.py  pyproject.toml  test.py  test2.py  test3.py
(+186 files in other folders)
